package org.slovosled;

public enum UserRole {
    TEACHER,
    STUDENT
}
